--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     },
     "dependencies": {
         "@codemirror/lang-json": "^6.0.1",
+        "@dnd-kit/core": "^6.1.0",
+        "@dnd-kit/sortable": "^8.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@emotion/react": "latest",
         "@emotion/styled": "latest",
         "@mui/icons-material": "^5.15.15",
