--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
         "@mui/material": "next",
         "@uiw/react-codemirror": "^4.21.25",
         "immer": "^10.0.4",
+        "marked": "^12.0.2",
         "react": "latest",
         "react-dom": "latest",
+        "react-markdown": "^9.0.1",
         "react-scripts": "latest",
+        "react-syntax-highlighter": "^15.5.0",
         "use-immer": "^0.9.0"
     },
     "browserslist": {
